--- a/index.html
+++ b/index.html
@@ -1,11 +1,195 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>웹 호스팅</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>12 Images Fixed Bottom Unified Size</title>
+<link rel="stylesheet" href="style.css">
+</head>
+
+
+  
+<body>
+  <div class="background"></div>
+  
+
+  <div id="div1"  class="box"><img src="https://i.imgur.com/XrruV5A.png" alt=""></div>
+  <div id="div2"  class="box"><img src="https://i.imgur.com/4mrjRZ7.png" alt=""></div>
+  <div id="div3"  class="box"><img src="https://i.imgur.com/qKI1koQ.png" alt=""></div>
+  <div id="div4"  class="box"><img src="https://i.imgur.com/Etli5ba.png" alt=""></div>
+  <div id="div5"  class="box"><img src="https://i.imgur.com/k1UYDpK.png" alt=""></div>
+  <div id="div6"  class="box"><img src="https://i.imgur.com/WR9KZBa.png" alt=""></div>
+  <div id="div7"  class="box"><img src="https://i.imgur.com/Cle473s.png" alt=""></div>
+  <div id="div8"  class="box"><img src="https://i.imgur.com/ZEjfPzK.png" alt=""></div>
+  <div id="div9"  class="box"><img src="https://i.imgur.com/NcTTPb7.png" alt=""></div>
+  <div id="div10" class="box"><img src="https://i.imgur.com/nrmUf3P.png" alt=""></div>
+  <div id="div11" class="box"><img src="https://i.imgur.com/9OKjXiu.png" alt=""></div>
+  <div id="div12" class="box"><img src="https://i.imgur.com/JmE9Ya9.png" alt=""></div>
+
+</body>
+</html>
+
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>SVG Move & Blink</title>
+<style>
+  body {
+    margin: 0;
+    background: #fff;
+    overflow: hidden;
+  }
+
+svg {
+  width: 2000px; 
+  height: 300px; 
+  fill: black;
+  display: block;
+  position: fixed;  
+  top: -85px;    
+  left: 0;           
+  transform: none;     
+  z-index: 1;         
+  pointer-events: none; 
+}
+
+ svg path {
+  animation: move 11s linear infinite;
+  fill: black;
+  pointer-events: auto;
+}
+
+svg:hover path {
+  animation-play-state: paused;
+  fill: #ffec00;
+  cursor: pointer;
+}
+
+  @keyframes move {
+    0% { transform: translateX(100%); }
+    100% { transform: translateX(-100%); }
+  }
+
+</style>
 </head>
 <body>
-    git pages 입니다.
+
+<?xml version="1.0" encoding="UTF-8"?>
+<svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 3035.41 84.42">
+  <path d="M57.91,59.83c-12.77.77-39.18,1.63-57.14,1.63l-.77-12.1c15.27.19,45.62-.48,57.91-1.34v11.81ZM55.51,25.26c-7.78-.67-45.23-.67-53.01,0v-11.33c7.01.38,46,.38,53.01,0v11.33ZM30.06,26.31c14.89,0,22.86,3.84,22.86,10.18s-7.97,10.47-22.86,10.47-24.2-4.03-24.2-10.47,9.03-10.18,24.2-10.18ZM46.1,12.39c-4.42-.1-29-.1-33.42,0V2.21c4.42.48,29,.48,33.42,0v10.18ZM81.15,68.38v15.65c-4.61-.19-54.74-.19-65.59,0,.29-3.17.29-15.94,0-19.3h18.25c-.1.38-.1,2.4-.19,4.23,11.62-.1,44.18-.38,47.54-.58ZM29.87,34.38c-5.09,0-7.01.86-7.01,1.92s1.92,1.92,7.01,1.92,7.11-.86,7.11-1.92-2.11-1.92-7.11-1.92ZM62.23,62.43c.29-4.42.29-57.53,0-62.43h17.58c-.29,4.9-.29,58.01,0,62.43h-17.58Z"/>
+  <path d="M178.06,0c-.29,4.32-.29,48.02,0,51.86h-16.04c.1-1.34.19-7.4.19-14.98h-5.76c0,6.91.1,12.48.19,13.73h-15.56c.1-1.06.19-4.8.29-9.89l-10.95,10.56c-5.09-5.09-8.84-9.8-11.52-14.41-3.27,5.67-7.68,11.04-13.73,16.61l-11.24-12.1c13.45-9.32,16.71-21.9,17.48-35.63h15.17c-.1,1.82-.19,3.65-.38,5.38h.1c.29,13.35,5.38,21.8,15.08,29.1.19-13.45.1-34.96-.29-38.03h15.56c-.1,1.82-.19,10.08-.19,19.4h5.76c0-10.37-.1-19.69-.19-21.61h16.04ZM112.66,55.61c4.32.48,59.16.38,65.02.19-.29,3.94-.29,24.68,0,28.52h-18.25c.38-3.27.38-11.81.29-13.35-3.36,0-43.41.38-47.06.58v-15.94Z"/>
+  <path d="M228.11,10.47c7.2.29,28.33.29,34.96,0-.77,29.1-7.2,43.03-28.62,61.94l-11.43-13.25c7.01-4.23,12.1-8.84,15.75-13.83-4.03.29-8.74.77-12.97,1.15l-.58-14.69c4.03,0,13.73-.19,19.88-.38.48-2.02.86-4.13,1.06-6.34-2.4-.1-13.54.19-18.06.38v-14.98ZM306.19,0c-.29,5.95-.29,78.27,0,83.75h-16.52c.1-2.4.19-18.06.19-35.15h-6.24c0,14.21.1,26.6.19,28.72h-16.04c.38-4.99.38-69.05,0-74.53h16.04c-.1,2.3-.19,15.46-.19,30.16h6.24c0-16.13-.1-30.44-.19-32.94h16.52Z"/>
+  <path d="M371.21,50.13c-7.68.29-38.32,1.25-46.77,1.63.19-4.9.19-24.87,0-29.68,3.65.1,19.21.19,27.08.1v-3.65c-7.97,0-23.72,0-27.08.1V5.28c3.84.29,38.42.29,43.51,0-.29,4.9-.29,23.53,0,28.33-3.55-.1-18.92-.1-26.51-.1v4.51c8.07-.29,25.74-1.06,29.77-1.34v13.45ZM334.81,56.37c4.32.48,59.16.48,65.02-.1-.29,3.94-.29,24.2,0,28.04h-18.25c.38-3.27.38-11.24.29-12.87-3.36,0-43.41.67-47.06.86v-15.94ZM399.93,0c-.29,4.42-.29,48.4,0,52.34h-17.48c.29-3.94.29-47.92,0-52.34h17.48Z"/>
+  <path d="M496.55,0c-.29,5.95-.29,78.27,0,83.75h-17.86c.1-2.5.19-19.21.19-37.07-6.24.1-19.21.29-20.17.38v-1.73h-20.94v7.97c7.68-.38,22.57-1.25,26.51-1.54v15.46c-12.77.67-32.94,1.73-43.79,2.21.29-8.45.29-51.67,0-60.12,5.76.29,35.53.29,40.82,0v15.65c-2.88-.19-15.37-.19-23.53-.19v6.82c7.49,0,18.63-.29,22.28-.38v.96c3.65.1,13.54.1,18.82.1,0-15.85-.1-29.77-.19-32.27h17.86Z"/>
+  <path d="M574.06,2.59c-.29,5.47-.29,70.11,0,75.1h-15.27c.19-2.21.29-15.85.38-31.02h-6.05c-2.11,15.94-10.47,22.28-19.11,22.28-10.28,0-19.98-8.45-19.98-30.35s9.7-29.68,19.98-29.68c8.74,0,17.19,6.15,19.21,22.28h5.95c-.1-14.02-.19-26.41-.38-28.62h15.27ZM538.14,38.61c0-8.64-1.44-13.73-4.13-13.73s-4.13,5.09-4.13,13.73,1.44,14.31,4.13,14.31,4.13-5.38,4.13-14.31ZM594.32,0c-.29,5.95-.29,78.27,0,83.75h-16.13c.29-5.47.29-77.79,0-83.75h16.13Z"/>
+  <path d="M688.16,9.6c-.19,4.23-.19,52.92,0,57.91h-16.23l-1.06-2.98c-1.92-.19-7.59-.19-9.51,0l-1.06,2.98h-16.9c.19-3.94.19-53.69,0-57.91,4.9.29,39.95.29,44.75,0ZM671.84,49.46v-24.68h-11.43v24.68h11.43ZM728.4,48.6l-10.47-.48c0,17.38.1,33.13.19,35.63h-17.86c.29-5.47.29-77.79,0-83.75h17.86c-.1,2.5-.19,17-.19,33.23l10.47-.48v15.85Z"/>
+  <path d="M823.3,62.04c-3.65-.19-18.44-.29-34.77-.29,0,6.34.19,19.98.38,21.99h-17.86c.19-2.02.38-15.65.38-21.99-16.33,0-31.12.1-34.77.29v-16.04c8.64.38,77.98.38,86.63,0v16.04ZM745.7,22.76c0-12.39,14.31-19.88,34.29-19.88s34.29,7.49,34.29,19.88c0,13.45-14.89,19.69-34.29,19.69s-34.29-6.24-34.29-19.69ZM763.94,22.95c0,2.98,5.67,4.42,16.04,4.42s16.04-1.44,16.04-4.42-5.67-4.42-16.04-4.42-16.04,1.54-16.04,4.42Z"/>
+  <path d="M832.71,61.56c8.64.29,77.98.29,86.63,0v16.61c-8.64-.29-77.98-.29-86.63,0v-16.61ZM844.53,50.8l-10.47-16.61c18.82-2.69,31.21-13.16,33.81-27.18h16.61c2.59,13.35,14.69,23.82,33.52,26.51l-10.47,16.61c-14.31-4.71-24.68-11.81-31.21-20.84-6.63,9.41-17.19,16.61-31.79,21.51Z"/>
+  <path d="M928.76,37.36c8.64.67,77.98.67,86.63,0v12.39c-8.64-.67-77.98-.67-86.63,0v-12.39ZM955.84,71.55c11.72.1,45.81.1,52.72-.19v13.06c-7.78-.19-62.23-.19-70.01,0,.29-2.88.29-19.3,0-22.19,5.09.1,38.22.1,49.75.1v-2.11h-49.56v-8.74c7.78.38,59.06.38,66.84,0-.29,2.11-.29,15.65,0,17.86h-49.75v2.21ZM1006.17,35.63c-9.32-.19-59.26-.19-67.04,0,.29-2.88.29-16.04,0-19.11,4.99.1,36.69.1,48.4.1v-2.21c-11.72-.1-43.22-.1-48.21-.1V2.98c7.78.38,57.82.38,65.69,0-.29,2.4-.29,18.34,0,20.74-5.86-.1-36.78,0-48.4,0v2.3c11.91,0,43.5,0,49.56-.19v9.8Z"/>
+  <path d="M1143.41,33.9v13.45c-8.64-.67-77.98-.67-86.63,0v-13.45c3.75.29,18.73.48,35.25.48v-2.31c-15.27-1.15-25.74-5.95-25.74-14.5,0-9.8,14.12-15.46,33.81-15.46s33.81,5.67,33.81,15.46c0,8.55-10.37,13.25-25.55,14.5v2.31c16.42,0,31.31-.19,35.05-.48ZM1084.25,71.45c11.62.1,44.95.1,51.86-.19v13.16c-7.78-.19-61.46-.19-69.24,0,.29-2.88.29-20.55,0-23.43,5.09.1,37.65.1,49.08.1v-2.3h-48.88v-9.51c7.78.38,58.49.38,66.27,0-.29,2.21-.29,17.48,0,19.78h-49.08v2.4ZM1100.1,20.17c9.89,0,15.56-.86,15.56-2.69s-5.67-2.79-15.56-2.79-15.56.96-15.56,2.79,5.67,2.69,15.56,2.69Z"/>
+  <path d="M1232.83,0c-.29,5.95-.29,78.27,0,83.75h-17.67c.1-1.92.19-12.2.19-24.97-4.9-.1-14.21,0-17.67.1v9.89l-40.82,1.44c.19-5.28.19-33.52,0-38.8,3.55.19,15.85.29,22.57.19v-7.3c-6.82,0-19.3,0-22.57.1v-15.27c3.84.29,32.94.29,38.03,0-.1,1.82-.19,6.05-.29,10.95,5.19.1,15.46.1,20.75,0,0-10.37-.1-18.25-.19-20.07h17.67ZM1196.34,44.18c.86.1,13.06.19,19.02.1v-9.32c-5.28-.1-15.65-.1-20.84,0,0,4.61,0,8.45.1,10.18h-20.46v9.32c6.34-.19,17.38-.67,22.19-.96v-9.32Z"/>
+  <path d="M1335.51,62.14v16.42c-8.64-.29-77.98-.29-86.63,0v-16.42c3.65.1,18.34.19,34.67.19,0-3.17,0-7.78-.1-11.14-12.29,0-22.86.1-24.39.29.29-3.94.29-40.62,0-44.56h17.09c0,.58-.1,3.46-.1,7.3,7.88.1,24.3.1,32.27,0,0-3.84-.1-6.72-.1-7.3h17.09c-.29,3.94-.29,40.62,0,44.56-1.54-.19-12.1-.29-24.39-.29-.1,3.36-.1,7.97-.1,11.14,16.33,0,31.02-.1,34.67-.19ZM1276.06,29.77v6.63h32.27v-6.63c-7.88-.1-24.39-.1-32.27,0Z"/>
+  <path d="M1374.41,9.03c-.19,5.09-.48,9.89-.86,14.31.48,14.31,4.61,26.03,13.54,35.53l-12.97,9.41c-3.26-4.71-6.05-9.51-8.36-14.31-2.5,4.9-5.67,9.89-9.99,15.27l-12.68-11.24c12.58-12,14.98-28.24,15.46-48.98h15.85ZM1405.91,2.69c-.29,5.47-.29,69.92,0,74.91h-15.65c.19-2.3.38-17.09.38-32.94-4.32,0-12.48,0-12.58.1v-15.65c.1.1,8.26.1,12.58.1-.1-13.16-.19-24.39-.38-26.51h15.65ZM1426.65,0c-.29,5.95-.29,78.27,0,83.75h-16.23c.29-5.47.29-77.79,0-83.75h16.23Z"/>
+  <path d="M1527.6,62.14v16.42c-8.64-.29-77.98-.29-86.63,0v-16.42c2.5.1,10.08.1,19.69.19-.19-3.94-.77-10.66-.96-12.2h17.67c-.19,1.54-.1,8.35-.1,12.2h14.02c0-3.84.1-10.66-.1-12.2h17.67c-.19,1.54-.77,8.26-.96,12.2,9.6-.1,17.19-.1,19.69-.19ZM1449.61,27.37c0-14.02,14.69-21.42,34.67-21.42s34.67,7.4,34.67,21.42-14.69,20.84-34.67,20.84-34.67-7.01-34.67-20.84ZM1467.86,27.37c0,2.98,4.99,5.28,16.42,5.28s16.42-2.31,16.42-5.28-4.99-5.28-16.42-5.28-16.42,2.21-16.42,5.28Z"/>
+  <path d="M1569.96,37.46h36.69v17.29h-36.69v-17.29Z"/>
+  <path d="M1713.64,6.34c-.58,7.49-.58,62.71,0,70.2h-19.21c.19-3.07.38-14.31.38-26.99-7.49-.1-18.63-.1-26.12,0,0,12.68.19,23.91.38,26.99h-19.21c.58-7.49.58-62.71,0-70.2h19.21c-.19,2.98-.38,13.25-.38,25.16,7.49.1,18.63.1,26.12,0,0-11.91-.19-22.19-.38-25.16h19.21Z"/>
+  <path d="M1721.23,41.68c0-23.05,16.42-36.78,36.78-36.78s36.78,13.73,36.78,36.78-16.42,36.98-36.78,36.98-36.78-13.73-36.78-36.98ZM1775.59,41.68c0-12.68-7.97-19.4-17.58-19.4s-17.58,6.72-17.58,19.4,7.97,19.59,17.58,19.59,17.58-6.72,17.58-19.59Z"/>
+  <path d="M1864.62,6.34c-4.03,10.76-21.03,55.8-25.83,70.2h-19.11c-4.8-14.41-20.26-59.45-24.39-70.2h21.13c1.63,6.72,8.74,31.02,13.25,45.71,4.71-14.69,12.29-39.09,13.83-45.71h21.13Z"/>
+  <path d="M1922.63,60.12v16.52c-5.38-.29-46.19-.29-51.96,0,.58-7.49.58-62.91,0-70.4,5.76.29,45.62.29,50.9,0v16.52c-3.65-.19-20.55-.29-31.5-.29v10.95c11.14,0,27.37-.1,30.54-.38v16.13c-3.17-.29-19.4-.38-30.54-.38v11.62c11.24,0,28.81-.1,32.56-.29Z"/>
+  <path d="M1976.42,76.54c-3.55-7.3-9.32-18.44-12.29-24.2h-12.1c0,11.52.19,21.32.38,24.2h-19.88c.58-7.49.58-62.71,0-70.2h37.94c13.93,0,21.99,9.7,21.99,22.86,0,9.22-3.75,16.61-10.47,20.36,2.5,5.09,13.35,24.59,15.08,26.99h-20.65ZM1952.03,21.99v15.17h13.25c5.67,0,8.45-3.17,8.45-7.78s-3.17-7.4-8.45-7.4h-13.25Z"/>
+  <path d="M2130.47,6.34c-2.3,7.4-15.56,53.49-20.26,70.2h-18.92l-11.52-42.45-12.87,42.45h-16.13c-4.23-14.98-17.86-62.81-20.46-70.2h22.38c.58,3.84,4.9,26.22,8.64,45.23,4.71-18.92,10.37-42.16,10.95-45.23h18.25c.58,3.84,5.47,26.6,9.51,45.33,3.65-19.02,7.88-41.49,8.45-45.33h21.99Z"/>
+  <path d="M2200.3,6.34c-.58,7.49-.58,62.71,0,70.2h-19.21c.19-3.07.38-14.31.38-26.99-7.49-.1-18.63-.1-26.12,0,0,12.68.19,23.91.38,26.99h-19.21c.58-7.49.58-62.71,0-70.2h19.21c-.19,2.98-.38,13.25-.38,25.16,7.49.1,18.63.1,26.12,0,0-11.91-.19-22.19-.38-25.16h19.21Z"/>
+  <path d="M2231.52,6.34c-.58,7.49-.58,62.71,0,70.2h-20.07c.58-7.49.58-62.71,0-70.2h20.07Z"/>
+  <path d="M2294.52,24.01c-2.11-.1-9.22-.19-17.77-.19-.19,15.65,0,46.96.48,52.73h-20.17c.48-5.76.58-37.07.38-52.73-8.45,0-15.56.1-17.67.19V6.24c5.76.29,48.98.29,54.74,0v17.77Z"/>
+  <path d="M2354.74,60.12v16.52c-5.38-.29-46.19-.29-51.96,0,.58-7.49.58-62.91,0-70.4,5.76.29,45.62.29,50.9,0v16.52c-3.65-.19-20.55-.29-31.5-.29v10.95c11.14,0,27.37-.1,30.54-.38v16.13c-3.17-.29-19.4-.38-30.54-.38v11.62c11.24,0,28.81-.1,32.56-.29Z"/>
+  <path d="M2430.23,4.9c17.38,0,30.35,10.08,33.52,25.55h-20.46c-1.92-5.09-6.53-8.16-12.87-8.16-9.41,0-15.65,7.68-15.65,19.5s6.24,19.5,15.94,19.5c6.63,0,11.52-3.65,13.35-9.32h20.07c-2.98,16.33-15.65,26.7-33.61,26.7-20.94,0-35.15-15.08-35.15-36.88s14.79-36.88,34.86-36.88Z"/>
+  <path d="M2537.51,6.34c-.58,7.49-.58,62.71,0,70.2h-19.21c.19-3.07.38-14.31.38-26.99-7.49-.1-18.63-.1-26.12,0,0,12.68.19,23.91.38,26.99h-19.21c.58-7.49.58-62.71,0-70.2h19.21c-.19,2.98-.38,13.25-.38,25.16,7.49.1,18.63.1,26.12,0,0-11.91-.19-22.19-.38-25.16h19.21Z"/>
+  <path d="M2600.9,76.54c-.96-2.59-2.69-6.92-4.71-12.2-6.82-.1-19.98-.1-27.37,0-2.11,5.28-3.84,9.7-4.8,12.2h-20.46c6.72-14.41,27.18-60.98,29.96-70.2h18.34c2.69,9.12,22.76,55.8,29.39,70.2h-20.36ZM2590.05,48.98l-7.39-18.54c-2.21,5.47-4.9,12-7.59,18.54h14.98Z"/>
+  <path d="M2671.21,76.54c-3.55-7.3-9.32-18.44-12.29-24.2h-12.1c0,11.52.19,21.32.38,24.2h-19.88c.58-7.49.58-62.71,0-70.2h37.94c13.93,0,21.99,9.7,21.99,22.86,0,9.22-3.75,16.61-10.47,20.36,2.5,5.09,13.35,24.59,15.08,26.99h-20.65ZM2646.81,21.99v15.17h13.25c5.67,0,8.45-3.17,8.45-7.78s-3.17-7.4-8.45-7.4h-13.25Z"/>
+  <path d="M2751.4,76.54c-.96-2.59-2.69-6.92-4.71-12.2-6.82-.1-19.98-.1-27.37,0-2.11,5.28-3.84,9.7-4.8,12.2h-20.46c6.72-14.41,27.18-60.98,29.96-70.2h18.34c2.69,9.12,22.76,55.8,29.39,70.2h-20.36ZM2740.55,48.98l-7.39-18.54c-2.21,5.47-4.9,12-7.59,18.54h14.98Z"/>
+  <path d="M2805.38,4.9c17.38,0,30.35,10.08,33.52,25.55h-20.46c-1.92-5.09-6.53-8.16-12.87-8.16-9.41,0-15.65,7.68-15.65,19.5s6.24,19.5,15.94,19.5c6.63,0,11.52-3.65,13.35-9.32h20.07c-2.98,16.33-15.65,26.7-33.61,26.7-20.94,0-35.15-15.08-35.15-36.88s14.79-36.88,34.86-36.88Z"/>
+  <path d="M2900.75,24.01c-2.11-.1-9.22-.19-17.77-.19-.19,15.65,0,46.96.48,52.73h-20.17c.48-5.76.58-37.07.38-52.73-8.45,0-15.56.1-17.67.19V6.24c5.76.29,48.98.29,54.74,0v17.77Z"/>
+  <path d="M2960.97,60.12v16.52c-5.38-.29-46.19-.29-51.96,0,.58-7.49.58-62.91,0-70.4,5.76.29,45.62.29,50.9,0v16.52c-3.65-.19-20.55-.29-31.5-.29v10.95c11.14,0,27.37-.1,30.54-.38v16.13c-3.17-.29-19.4-.38-30.54-.38v11.62c11.24,0,28.81-.1,32.56-.29Z"/>
+  <path d="M3014.76,76.54c-3.55-7.3-9.32-18.44-12.29-24.2h-12.1c0,11.52.19,21.32.38,24.2h-19.88c.58-7.49.58-62.71,0-70.2h37.94c13.93,0,21.99,9.7,21.99,22.86,0,9.22-3.75,16.61-10.47,20.36,2.5,5.09,13.35,24.59,15.08,26.99h-20.65ZM2990.36,21.99v15.17h13.25c5.67,0,8.45-3.17,8.45-7.78s-3.17-7.4-8.45-7.4h-13.25Z"/>
+</svg>
+  
+   <script>
+    const img5 = document.getElementById('img5');
+    const originalSrc = "https://i.imgur.com/k1UYDpK.png";
+    const newSrc = "https://i.imgur.com/uIN44KZ.png";
+    let toggled = false;
+
+    document.getElementById('div5').addEventListener('click', () => {
+      toggled = !toggled;
+      img5.src = toggled ? newSrc : originalSrc;
+    });
+  </script>
+
+</body>
+</html>
+
+<title>뮤직 버튼</title>
+<style>
+  body {
+    margin: 0;
+    padding: 0;
+  }
+
+  /* 고정 뮤직 버튼 */
+  #music-btn {
+    position: fixed;       /* 화면에 고정 */
+    top: 20px;          /* 아래에서 20px */
+    left: 15px;           /* 오른쪽에서 20px */
+    z-index: 999;         /* 다른 요소 위 */
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    background-color: #ffec00;
+    border: 5px solid #000;
+    cursor: pointer;
+    font-size: 40px;
+    padding-top: 6px;
+    padding-left: 6px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 4px 6px rgba(0,0,0,0);
+    transition: transform 0.2s;
+    font-family: 'Arial', sans-serif;
+  }
+
+  /* 버튼 클릭할 때 살짝 커지도록 */
+  #music-btn:active {
+    transform: scale(1.1);
+  }
+</style>
+</head>
+<body>
+
+<!-- 음악 버튼 -->
+<button id="music-btn">▶</button>
+<audio id="bg-music" loop>
+  <source src="https://github.com/zzeluvdesign/digitalgraphics_project1/raw/refs/heads/main/subway.wav" type="audio/wav">
+</audio>
+
+<script>
+  const btn = document.getElementById('music-btn');
+  const music = document.getElementById('bg-music');
+  let isPlaying = false;
+
+  btn.addEventListener('click', () => {
+    if(isPlaying){
+      music.pause();
+      btn.textContent = '▶';  // 재생 아이콘
+    } else {
+      music.play();
+      btn.textContent = '⏸';  // 일시정지 아이콘
+    }
+    isPlaying = !isPlaying;
+  });
+</script>
+
 </body>
 </html>
