--- a/index.html
+++ b/index.html
@@ -8,18 +8,9 @@
 </head>
 <head>
     <meta property="og:image" content="https://i.imgur.com/LRrGz26.png" />
-    <meta
-      property="og:title"
-      content=“이번 역은 지옥철입니다!"
-    />
-    <meta
-      property="og:description"
-      content=“Available exclusively in web browsers."
-    />
-    <meta
-      property="og:url"
-      content="https://zzeluvdesign.github.io/"
-    />
+    <meta property="og:title" content="이번 역은 지옥철입니다!" />
+    <meta property="og:description" content="Available exclusively in web browsers." />
+    <meta property="og:url" content="https://zzeluvdesign.github.io/" />
 </head>
 
   
