--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>12 Images Fixed Bottom Unified Size</title>
+<title>☠️Hell Station☠️</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <head>
